ops/goldi-locks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldilocks
