ops/kafka.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
