ops/mongodb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
