ops/reloader-setup.yaml
#helm repo add wave-k8s https://wave-k8s.github.io/wave/
#helm install wave wave-k8s/wave
---
apiVersion: v1
kind: Namespace
metadata:
  name: wave
