ops/solr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solr
