ops/flux-capacitor-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: flux-system  
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: capacitor     
  ports:
    - name: http
      protocol: TCP
      port: 9000       
      targetPort: 9000
