ops/infisical-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: infisical-release
    meta.helm.sh/release-namespace: external-secrets
  labels:
    app: infisical-standalone
    app.kubernetes.io/managed-by: Helm
    chart: infisical-standalone-1.0.8
    component: infisical
    helm.toolkit.fluxcd.io/name: infisical
    helm.toolkit.fluxcd.io/namespace: external-secrets
    heritage: Helm
    release: infisical-release
  name: infisical-infisical-standalone-infisical-np
  namespace: external-secrets
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: infisical-standalone
    component: infisical
    release: infisical
  sessionAffinity: None
  type: NodePort
