ops/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    wave.pusher.com/update-on-config-change: "true"
  name: pgbouncer
  namespace: postgresql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
      - name: pgbouncer
        image: ghcr.io/icoretech/pgbouncer-docker:1.24.0
        ports:
        - containerPort: 6432
          name: psql
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/pgbouncer/
          name: config
        - mountPath: /etc/userlist/
          name: userlist
      volumes:
      - configMap:
          defaultMode: 420
          name: pgbouncer-config
        name: config
      - name: userlist
        configMap:
          defaultMode: 420
          name: pgbouncer-userlist
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    netbird.io/expose: "true"
    netbird.io/policy: default
    netbird.io/resource-name: ts-postgres
    netbird.io/groups: ts-k8s-gke
  name: ts-pgbouncer-service
  namespace: postgresql
spec:
  type: LoadBalancer   
  selector:
    app: pgbouncer
  ports:
    - protocol: TCP
      port: 6432
      targetPort: 6432
